// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector should render a checked selector 1`] = `
HTMLCollection [
  .circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label {
  box-shadow: 0 0 0 2px #3063E9,0 0 0 5px #AFD0FE;
}

.circuit-0:focus + label:hover {
  box-shadow: 0 0 0 2px #3063E9,0 0 0 5px #AFD0FE;
}

.circuit-0:focus + label:active {
  box-shadow: 0 0 0 2px #3063E9,0 0 0 5px #AFD0FE;
}

<input
    checked=""
    class="circuit-0"
    id="selector_3"
    name="name"
    type="radio"
    value="value"
  />,
  .circuit-0 {
  display: inline-block;
  cursor: pointer;
  padding: 16px 24px;
  background-color: #F0F6FF;
  text-align: center;
  position: relative;
  border: none;
  border-radius: 8px;
  -webkit-transition: box-shadow 0.1s ease-in-out;
  transition: box-shadow 0.1s ease-in-out;
  box-shadow: 0 0 0 2px #3063E9;
  padding: calc(8px + 1px) 24px;
}

.circuit-0:hover {
  background-color: #F5F5F5;
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-0:active {
  background-color: #E6E6E6;
  box-shadow: 0 0 0 2px #3063E9;
}

<label
    class="circuit-0"
    for="selector_3"
  >
    Label
  </label>,
]
`;

exports[`Selector should render a default selector 1`] = `
HTMLCollection [
  .circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label {
  box-shadow: 0 0 0 1px #CCC,0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label:hover {
  box-shadow: 0 0 0 1px #999,0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label:active {
  box-shadow: 0 0 0 1px #666,0 0 0 4px #AFD0FE;
}

<input
    class="circuit-0"
    id="selector_1"
    name="name"
    type="radio"
    value="value"
  />,
  .circuit-0 {
  display: inline-block;
  cursor: pointer;
  padding: 16px 24px;
  background-color: #FFF;
  text-align: center;
  position: relative;
  border: none;
  border-radius: 8px;
  -webkit-transition: box-shadow 0.1s ease-in-out;
  transition: box-shadow 0.1s ease-in-out;
  box-shadow: 0 0 0 1px #CCC;
  padding: calc(8px + 1px) 24px;
}

.circuit-0:hover {
  background-color: #F5F5F5;
  box-shadow: 0 0 0 1px #999;
}

.circuit-0:active {
  background-color: #E6E6E6;
  box-shadow: 0 0 0 1px #666;
}

<label
    class="circuit-0"
    for="selector_1"
  >
    Label
  </label>,
]
`;

exports[`Selector should render a disabled selector 1`] = `
HTMLCollection [
  .circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label {
  box-shadow: 0 0 0 1px #CCC,0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label:hover {
  box-shadow: 0 0 0 1px #999,0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label:active {
  box-shadow: 0 0 0 1px #666,0 0 0 4px #AFD0FE;
}

<input
    class="circuit-0"
    disabled=""
    id="selector_2"
    name="name"
    type="radio"
    value="value"
  />,
  .circuit-0 {
  display: inline-block;
  cursor: pointer;
  padding: 16px 24px;
  background-color: #FFF;
  text-align: center;
  position: relative;
  border: none;
  border-radius: 8px;
  -webkit-transition: box-shadow 0.1s ease-in-out;
  transition: box-shadow 0.1s ease-in-out;
  box-shadow: 0 0 0 1px #CCC;
  padding: calc(8px + 1px) 24px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #F5F5F5;
  box-shadow: 0 0 0 1px #999;
}

.circuit-0:active {
  background-color: #E6E6E6;
  box-shadow: 0 0 0 1px #666;
}

<label
    class="circuit-0"
    disabled=""
    for="selector_2"
  >
    Label
  </label>,
]
`;
